add msg_route function

--- a/framework/linked_list/makefile
+++ b/framework/linked_list/makefile
@@ -1,21 +1,18 @@
-target = libmy_threadPool.so
-objects = thread_pool.o
+target = liblinked_list.so
+objects = linked_list.o
 
 CUR_DIR := $(shell pwd)
 
-$(warning "make my_thread_pool.so")
+$(warning "make liblinked_list.so")
 $(warning "cur dir is $(CUR_DIR)")
 
 
 INCLUDE := -I $(CUR_DIR)
 INCLUDE += -I $(CUR_DIR)/../log/
-INCLUDE += -I $(CUR_DIR)/../linked_list/
-CFLAGS += -shared -fPIC -g -z,defs
-LDFLAGS += -lpthread -shared
-LDFLAGS += -L $(CUR_DIR)/../log/ -lmy_log
-LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../log/
-LDFLAGS += -L $(CUR_DIR)/../linked_list/ -llinked_list
-LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../linked_list/
+CFLAGS += -fPIC -g
+LDFLAGS += -shared
+#LDFLAGS += -L $(CUR_DIR)/../../opensource/cjson/lib/ -lcjson
+#LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../../opensource/cjson/lib/
 CFLAGS += $(INCLUDE)
 
 all: $(target) #make all或者make test都会执行7和9
