--- a/test/linked_list/makefile
+++ b/test/linked_list/makefile
@@ -1,28 +1,24 @@
-target = libmy_threadPool.so
-objects = thread_pool.o
+target = test
+objects = test_linked_list.o
 
 CUR_DIR := $(shell pwd)
 
-$(warning "make my_thread_pool.so")
+$(warning "make liblog.so")
 $(warning "cur dir is $(CUR_DIR)")
 
 
 INCLUDE := -I $(CUR_DIR)
-INCLUDE += -I $(CUR_DIR)/../log/
-INCLUDE += -I $(CUR_DIR)/../linked_list/
-CFLAGS += -shared -fPIC -g -z,defs
-LDFLAGS += -lpthread -shared
-LDFLAGS += -L $(CUR_DIR)/../log/ -lmy_log
-LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../log/
-LDFLAGS += -L $(CUR_DIR)/../linked_list/ -llinked_list
-LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../linked_list/
+INCLUDE += -I $(CUR_DIR)/../../framework/linked_list/
+CFLAGS += -g
+LDFLAGS += -L $(CUR_DIR)/../../framework/linked_list/ -llinked_list
+LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../../framework/linked_list/
 CFLAGS += $(INCLUDE)
 
 all: $(target) #make all或者make test都会执行7和9
 obj: $(objects) #make obj会执行9
 
 $(target):$(objects)
-	gcc $(LDFLAGS) $^ -o $@
+	gcc $^ -o $@ $(LDFLAGS) 
 $(objects): %.o: %.c
 	gcc -c $(CFLAGS) $< -o $@
 
