--- a/framework/msg_route/msg_route_client/makefile
+++ b/framework/msg_route/msg_route_client/makefile
@@ -1,28 +1,27 @@
-target = libmy_threadPool.so
-objects = thread_pool.o
+target = libmsg_route_client.so
+objects = msg_route_client.o
+
 
 CUR_DIR := $(shell pwd)
 
-$(warning "make my_thread_pool.so")
+$(warning "make libmsg_route_client.so")
 $(warning "cur dir is $(CUR_DIR)")
 
 
 INCLUDE := -I $(CUR_DIR)
-INCLUDE += -I $(CUR_DIR)/../log/
-INCLUDE += -I $(CUR_DIR)/../linked_list/
-CFLAGS += -shared -fPIC -g -z,defs
-LDFLAGS += -lpthread -shared
-LDFLAGS += -L $(CUR_DIR)/../log/ -lmy_log
-LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../log/
-LDFLAGS += -L $(CUR_DIR)/../linked_list/ -llinked_list
-LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../linked_list/
+INCLUDE += -I $(CUR_DIR)/../msg_route_comm/
+INCLUDE += -I $(CUR_DIR)/../../log/
+CFLAGS += -fPIC -g
+LDFLAGS += -shared -lpthread
+LDFLAGS += -L $(CUR_DIR)/../../log/ -lmy_log
+LDFLAGS += -Wl,-rpath=$(CUR_DIR)/../../log/
 CFLAGS += $(INCLUDE)
 
 all: $(target) #make all或者make test都会执行7和9
 obj: $(objects) #make obj会执行9
 
 $(target):$(objects)
-	gcc $(LDFLAGS) $^ -o $@
+	gcc $^ -o $@ $(LDFLAGS) 
 $(objects): %.o: %.c
 	gcc -c $(CFLAGS) $< -o $@
 
